deployment/nineties-namer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nineties-namer
  namespace: nineties-namer
spec:
  selector:
    app: nineties-namer
  ports:
    - port: 80
      protocol: TCP
  type: NodePort
