deployment/nineties-namer/ingress.yaml
apiVersion: apps/v1beta1
kind: Ingress
metadata:
  name: nineties-namer
  namespace: nineties-namer
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "gce"
spec:
  tls:
  - hosts:
    - 90s.fun
    secretName: app-tls
  rules:
  - host: 90s.fun
    http:
      paths:
      - path: /*
        backend:
          serviceName: nineties-namer
          servicePort: 80
